# be15-fin-deveagles

.github/workflows/: deploy.yml  frontend-deploy.yml  main.yml
be15_DevEagles_BE/: Dockerfile  build.gradle
be15_DevEagles_BE/.github/workflows/: deploy.yml
be15_DevEagles_BE/src/main/resources/: application.yml
be15_DevEagles_DA/: DEPLOYMENT.md  Dockerfile  Dockerrun.aws.json  Makefile  README.md  config.yaml  deploy-ec2.sh  docker-compose-etl.yml  docker-compose.yml  health_check.py  pyproject.toml  requirements.txt  run_dashboard.py  run_tests.py  segment_update.py  supervisord.conf
be15_DevEagles_DA/scripts/: run_dashboard.sh  run_scheduler.sh  run_segment_updater.sh  run_webserver.sh
be15_DevEagles_DA/src/airflow/dags/: crm_to_duckdb_etl.py
be15_DevEagles_DA/src/analytics/: __init__.py
be15_DevEagles_DA/src/analytics/assets/: disable-react-warnings.js
be15_DevEagles_DA/src/analytics/core/: config.py  database.py  duckdb_client.py  logging.py
be15_DevEagles_DA/src/analytics/dashboard/: __init__.py  bi_dashboard.py  constants.py  theme.py
be15_DevEagles_DA/src/analytics/dashboard/components/: common.py
be15_DevEagles_DA/src/analytics/dashboard/utils/: decorators.py  serializers.py
be15_DevEagles_DA/src/analytics/services/: __init__.py  churn_prediction.py  churn_prediction_duckdb.py  cohort_retention.py  cohort_retention_duckdb.py  segment_management.py  segment_scheduler.py
be15_DevEagles_DA/tests/integration/: test_db_connection.py
be15_DevEagles_DA/tests/services/: test_churn_prediction.py  test_churn_prediction_duckdb.py  test_cohort_retention.py  test_segmentation.py  test_segmentation_duckdb.py
be15_DevEagles_FE/: index.html  package.json
be15_DevEagles_FE/src/components/common/: BaseTagSelector.vue  BaseToast.vue
be15_DevEagles_FE/src/components/icons/: GiftIcon.vue  PlusCircleIcon.vue  ReceiptIcon.vue  StarIcon.vue  index.js
be15_DevEagles_FE/src/components/layout/: TheHeader.vue  TheLayout.vue
be15_DevEagles_FE/src/features/analytics/api/: dashboardAPI.js
be15_DevEagles_FE/src/features/campaigns/components/: CampaignForm.vue
be15_DevEagles_FE/src/features/chat/components/: ChatListView.vue  ChatMessages.vue  ChatModal.vue  ChatRoomLoader.vue  ChatToastProvider.vue  LoadingWave.vue
be15_DevEagles_FE/src/features/chat/composables/: socket.js
be15_DevEagles_FE/src/features/coupons/components/: CompactCouponSelector.vue  CouponSelectorModal.vue
be15_DevEagles_FE/src/features/customer/components/: CustomerCreateDrawer.vue  CustomerDetailModal.vue  CustomerEditDrawer.vue  CustomerFilterModal.vue
be15_DevEagles_FE/src/features/customer/views/: CustomerListView.vue
be15_DevEagles_FE/src/features/membership/components/: CustomerMembershipDetailModal.vue  MembershipDetailModal.vue  MembershipExpiryFilterModal.vue  MembershipForm.vue
be15_DevEagles_FE/src/features/messages/api/: autoSend.js  message.js  templates.js
be15_DevEagles_FE/src/features/messages/components/: MessageItem.vue  TemplateItem.vue
be15_DevEagles_FE/src/features/messages/views/: MessagesListView.vue  SettingsView.vue  TemplateListView.vue
be15_DevEagles_FE/src/features/notifications/api/: notifications.js
be15_DevEagles_FE/src/features/notifications/components/: NotificationList.vue
be15_DevEagles_FE/src/features/profilelink/views/: ProfileLinkView.vue  (+1 more)
be15_DevEagles_FE/src/features/schedules/: routes.js
be15_DevEagles_FE/src/routes/: index.js
be15_DevEagles_FE/src/store/: auth.js  useChatStore.js
be15_DevEagles_FE/src/views/: Home.vue
(+182 files in other folders)
